<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_default_room_name"
        android:entries="@array/pref_room_names_titles"
        android:entryValues="@array/pref_room_names_values"
        android:key="@string/pref_room_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_room_name" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/pref_auto_mode_key"
        android:summary="@string/pref_description_auto_mode"
        android:title="@string/pref_title_auto_mode" />

    <!--EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_room_name"
        android:inputType="textCapWords"
        android:key="@string/pref_room_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_room_name" / -->

    <ListPreference
        android:dependency="@string/pref_auto_mode_key"
        android:defaultValue="@string/pref_default_offset_delay"
        android:entries="@array/pref_offset_delay_titles"
        android:entryValues="@array/pref_offset_delay_values"
        android:key="@string/pref_offset_delay_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_offset_delay" />

    <ListPreference
        android:defaultValue="@string/pref_default_statistics_talk_limit"
        android:entries="@array/pref_statistics_talk_limit_titles"
        android:entryValues="@array/pref_statistics_talk_limit_values"
        android:key="@string/pref_statistics_talk_limit_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_statistics_talk_limit" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/pref_statistics_best_talks_key"
        android:summary="@string/pref_description_statistics_best_talks"
        android:title="@string/pref_title_statistics_bets_talks" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/pref_vibrator_key"
        android:summary="@string/pref_description_vibrator"
        android:title="@string/pref_title_vibrator" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_email"
        android:inputType="textEmailAddress"
        android:key="@string/pref_email_key"
        android:maxLines="1"
        android:singleLine="true"
        android:title="@string/pref_title_email" />


    <!-- ListPreference
        android:defaultValue="@string/pref_title_chart_type"
        android:entries="@array/pref_chart_type_titles"
        android:entryValues="@array/pref_chart_type_values"
        android:key="@string/pref_chart_type_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_chart_type" / -->

</PreferenceScreen>
