<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/cardview_height"
        android:layout_gravity="center_vertical"
        android:layout_weight=".90"
        android:elevation="@dimen/cardview_elevation"
        app:cardCornerRadius="@dimen/cardview_corner_radius"
        app:cardElevation="@dimen/cardview_elevation"
        card_view:cardBackgroundColor="@color/cardview_background"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/twenty">


            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardviewSpeakerImage"
                android:layout_width="@dimen/cardview_image_size"
                android:layout_height="@dimen/cardview_image_size"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@color/cardview_background"
                android:scaleType="centerCrop"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:srcCompat="@drawable/love" />


            <TextView
                android:id="@+id/cardviewTalkTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"

                android:layout_margin="@dimen/two"
                android:layout_toRightOf="@id/cardviewSpeakerImage"
                android:gravity="center"
                android:hint="@string/cardview_talk_title"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="@dimen/cardview_talk_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cardviewSpeakerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardviewTalkTitle"

                android:layout_margin="@dimen/two"
                android:layout_toEndOf="@id/cardviewSpeakerImage"
                android:gravity="center"
                android:hint="@string/cardview_speaker_name"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="@dimen/cardview_speaker_name"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/cardviewScheduleId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_below="@id/cardviewSpeakerName"

                android:layout_margin="@dimen/two"
                android:layout_toEndOf="@id/cardviewSpeakerImage"
                android:hint="@string/cardview_item_info"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="@dimen/cardview_scheduleId"
                android:textStyle="italic"
                android:visibility="visible" />

            <TextView
                android:id="@+id/cardViewItemNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/cardviewScheduleId"
                android:layout_centerHorizontal="false"
                android:layout_centerInParent="false"
                android:layout_centerVertical="false"
                android:layout_margin="@dimen/two"
                android:layout_toEndOf="@id/cardviewSpeakerImage"
                android:hint="@string/cardview_item_number"
                android:text="1"
                android:textAlignment="textEnd"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/cardview_order"
                android:textStyle="normal"
                android:visibility="visible" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
